frontend/test/should_fail/index_exec_edge_fromIndexMultipleFromTo_argument_mismatch.grg
#using "index_exec_multiple_model.gm"

sequence s(j:double)
{
	{ i:set<AEdge>=edgesFromIndexMultipleFromTo(bari, j, 42, bard, 0.0, 1.0) }
}
